# ChangeLog for dev-cpp/libxmlpp
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-cpp/libxmlpp/ChangeLog,v 1.132 2014/06/22 18:43:47 maekke Exp $

  22 Jun 2014; Markus Meier <maekke@gentoo.org> libxmlpp-2.36.0.ebuild:
  add ~arm, bug #511566

  12 Oct 2013; Pacho Ramos <pacho@gentoo.org> -files/libxmlpp-1.0.5-gcc43.patch,
  -libxmlpp-1.0.5.ebuild, -libxmlpp-2.34.2.ebuild:
  Drop old

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for sparc, wrt bug #458984

  01 Apr 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for alpha, wrt bug #458984

  29 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for ia64, wrt bug #458984

  27 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for ppc64, wrt bug #458984

  26 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for ppc, wrt bug #458984

  26 Mar 2013; Jeroen Roovers <jer@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for HPPA (bug #458984).

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for x86, wrt bug #458984

  25 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libxmlpp-2.36.0.ebuild:
  Stable for amd64, wrt bug #458984

*libxmlpp-2.36.0 (24 Nov 2012)

  24 Nov 2012; Gilles Dartiguelongue <eva@gentoo.org> +libxmlpp-2.36.0.ebuild:
  Version bump. Bump to EAPI 5. Examples are now tests as well and handled
  accordingly.

  04 May 2012; Jeff Horelick <jdhore@gentoo.org> libxmlpp-1.0.5.ebuild,
  libxmlpp-2.34.2.ebuild:
  dev-util/pkgconfig -> virtual/pkgconfig

  20 Nov 2011; Gilles Dartiguelongue <eva@gentoo.org> -libxmlpp-2.32.0.ebuild,
  -libxmlpp-2.32.0-r1.ebuild, -libxmlpp-2.34.1.ebuild:
  Clean up old revisions.

  30 Oct 2011; Raúl Porcel <armin76@gentoo.org> libxmlpp-2.34.2.ebuild:
  alpha/ia64/sparc stable wrt #385699
