@@ -5,25 +5,13 @@ DIST cligh-0.1_p20120630.tar.gz 7848 SHA256 a531dac9c04fe832aa823334f7ff9e3b2034
 DIST cligh-0.2.tar.gz 7844 SHA256 89b101d9e556d706cb6f5e1fcaec4b226942f52cabd7eef5d5519bcf28269de1 SHA512 9b6e5e187324ccc1d9264aa259f648231f46aa443b75682206a17626f4f6f594a14538066f5e561c8a296d740506216db4cbd6ef7a9d25338a9d641cec7e3b9c WHIRLPOOL ba3aa9974186675831aca44b653c4b74f7224a2dd18de73180145649342efc4222c5877e46609dd68deb9833c98cb94ce4e5f90195ccafb29236b8822baa0789
 EBUILD cligh-0.1_p20120630.ebuild 667 SHA256 2419e281b209699bc79a5a4d008b4b088646150e83c5193e25929acb0bd50701 SHA512 9deb8160346a48962635664573876b4be0c841c1c58e6683179caf07bffc0df2f417fc507e5b2beac57ad326291add5b7fd4b9ec0fc9dc2e9747358ed36a0335 WHIRLPOOL d230dcb0098080b724c4e9a123731e7907e4af63f3dfa7f698bcc2379bc64e97feb2a9e739918239a4e470eca6e5656b7d2ca7513f19c5c5caf367dbac5835a7
 EBUILD cligh-0.2.ebuild 594 SHA256 70f72a68abcc2d8d3bbcbb4ccaee783a75ea956cf978cbfd72432a2c3470f1a8 SHA512 077c04f80ad4b7e4255ffe5e3da1fc43186490d099d92778e30523154ccc6ef4ffe95fdebb2726a34c91f42891f8d2b88cd2a99e7b04d220990013d0bc54140c WHIRLPOOL 55836e58ba8ac0bca339a64bf3046b0223cb96fc61983673a77a04503e18f617db55af7541034dd87d411bfc51fc059a025d08187ab25eee522ec694cb2ba40b
-EBUILD cligh-9999.ebuild 616 SHA256 c190ed699cbe3d7d1e7c4d8063096545ca960eb1fbe4ac3f1316b86a98938c4b SHA512 8f19a04d6f1f47319a0aa6cfbcd92c9776652ac5dcfdb66331656d9cfc279a6c5b333c5389e840e8b6468e395bcc76b819d3ccf801dc9d670c7ce3c91fce2cc2 WHIRLPOOL 984f890cf67c189817f22e3110e8b1766908702f4af5d8d59dad615924b652a4be9b9998e28568858ed8bc3a74294c4aa3ff3586f4bf8486af2df09b9b192e15
-MISC ChangeLog 791 SHA256 41ae687f6bdf51f4fbd450aa9545642bd58e8cdb099c387e5cba09702c73cbff SHA512 7f1d0d52a5f208e5a17eaaffc1596762a6cc79d10c5273389697e07e4a9147b6367fbc7b84a02279ed5ece6181e7f2c1a0d593bc78d2b5a2ff6e5c71bdf386f6 WHIRLPOOL 07f8a618cc0e7e992f29f0a8303cc9e777ea072b157cb8ff557e0bb791c0191f04e8d0c5c486b89a7f92fc2ecc931423314e8f2485088a5d9a92bf222ba89abe
+EBUILD cligh-9999.ebuild 622 SHA256 710f7f4c5898ddee1649ee5449292509c82069e37dcddae3c81f8684c2d1335d SHA512 72fad341b78e2dab6ce4f1d1e838046e44e2eaddcf6ad97b5737f7f2fa4f4a4ff3693b9482780bad5bdf536114c813762a1d17d099f10c1e9418df1b1ea496de WHIRLPOOL 2a118aae3b51a1455fc3a01790b4a524328a97e8216e808f17ee54f3cbe632c559437da1972340d212a760c4d09ca7cbf4c0b66484242c54bebc06f0c0e5ea42
+MISC ChangeLog 895 SHA256 0044753473510131df081acd708d6f748deed40d20d2d753779ef97125b1ce8f SHA512 49631eeb6cbd2c51efea736a83083dc6dffa8075adb30874524412a7f243f5517ad0f4084f0131503498151374ab58268c625166ffaaca9111a814d5e30b2dc3 WHIRLPOOL 14bf5235654a1f56bbecf52024ea8588f47a19b7d8a86b62b4e723517caa9de1f7101455fc01c2e16e2fbc3f0491ee0e356fc34590fb6f488239a63fd075497e
 MISC metadata.xml 327 SHA256 d5e381715c0e95ec3852a1565d0e862d54428f3f4dcecc07525a26eb88842c08 SHA512 a5b4b5a05abe132c4a8b9bc0bc378392388f0b2aec36015fa6b8e33853906ceb2abb65191a4dc0cd55f8c75e879a9680aaa53cfebdc7e41560a8cbfc9ac45877 WHIRLPOOL e274ed06938b4d873e1c32f98fe0af529fa7b9a7d697849ec84d779c8ddfd46a68b14ca46d16a7b5af8535597af552e8ec4ced6b9a0a52d529bdaf337b5988a3
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQJ8BAEBCABmBQJTuUZnXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQ2REJCMDdDQzRGMERBRDA2RUEwQUZFNDFC
-MDdBMUFFQUVGQjQ0NjRFAAoJELB6GurvtEZOuEQP/04ZSNj/rVmUXnYJtgr1POOS
-U5qlnEDgL7nqZB9nSHlcl1DBskw2YQ/DdH+bYu5NsbahRat05X5qkcsQxnTHQOW8
-B8lD26x6ZauN5A7cjIKXkwkbuIdurqvdu5Hof7fJFZkoHbgDDNXGhneDklYypjCy
-fVR2Ch1x0iIJbS8c63JfcUUnUnCNz17e+vT+ix4Pa+PQI3hnJgbRpYaIgVC/6mew
-ie/lz6Ke8JCezm77kpu1rCO8HcpF2qAfC8OjRF6yMiUqGsaSfKjdwnaX1ka6ZRE5
-J3MfMnewtnWetC2hM3zeHKdDJugJ8bJwyMMgDOCW3zMAh4+DJ3kjtfVse5Wlj1rw
-jl4HCSDc8aYPB/pnrmK76es6idtNicQZ8e0RnrwAfat0q2ksVfP9yEJVLqNvdmHa
-fBjws1SJAa6MFuEqLzU6m7hdkeFKOQg7cJMRurVa9onLZAFZAd6feKyMTIJ6GoS5
-DLV0JDEzvQ66SN4YDg+o+eD7QxWimuOydlylXdEQodXFaHBQaLZV91YdZ82bCbWI
-lvmmQrm77R8zz90ZUbeYHCAju1I+2Qu7LjuNT+JT60pRsbdQLqREAoIZLrqOAGjX
-DD9xmSrAMC8wenQ4FOl5kZEq650M3NPDU62WFAAfesI15aymDsdkBL2cUhhShOdK
-6xkZ8N0DRk7aFqODeC6n
-=iLvH
+iEYEAREIAAYFAlUPJDUACgkQblQW9DDEZThDWgCfXteNQ6rc7EPszU9fJ9Rc+x37
+WC0AnAvdErVx88D9W9gY6PER1YAAGILP
+=DZg9
 -----END PGP SIGNATURE-----
