@@ -1,9 +1,9 @@
-# Copyright 1999-2014 Gentoo Foundation
+# Copyright 1999-2015 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-util/cligh/cligh-9999.ebuild,v 1.2 2014/07/06 12:51:44 mgorny Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-util/cligh/cligh-9999.ebuild,v 1.3 2015/03/22 20:20:59 williamh Exp $
 
 EAPI=5
-PYTHON_COMPAT=( python{2_6,2_7} )
+PYTHON_COMPAT=( python{3_2,3_3,3_4} )
 
 inherit distutils-r1 git-2
 
